# pti-docs

./: .gitignore  Makefile.common  README.md  index.html  pyproject.toml  styles.css
.github/codeql/: codeql_config.yaml
.github/workflows/: build.yml
api-dev/v1/: index.html  pti-doc-styles.css  public-api.json  public-api.yaml
api/v0/: index.html  index2.html  pti-api.yaml  public-api.yaml
api/v1/: index.html  pti-doc-styles.css  public-api.json  public-api.yaml
concepts/v0/: concepts.hmd  guide.hmd  index.html
docs/: README.md  _sidebar.md  auth.md  home.md  index.html  kyc.md  onboarding.md  sdk.md  usage.md
examples/: generate_keypair.sh  package.json
examples/PythonBackendApp/: README.md  client_backend.py  my_pti_private_key.jwk  my_pti_public_key.jwk  pti_tools.py  pyproject.toml  requirements.txt  run.sh
examples/PythonBackendApp/src/backend/: client_backend.py  pti_tools.py
examples/PythonBackendApp/web/templates/: make_transaction.html
examples/PythonBackendApp/web/templates/admin/: users.html
examples/ReactJsSdkApp/: .editorconfig  .env  .prettierrc  README.md  craco.config.js  package-lock.json  package.json  webpack.config.js
examples/ReactJsSdkApp/public/: index.html  manifest.json
examples/ReactJsSdkApp/src/: App.js  env.js  index.js  theme.js
examples/ReactJsSdkApp/src/app/: App.js  SimpleDialog.js  Styles.js  callCreateUser.js  callIsKycNeeded.js  callTransactionLog.js  checkIfKycNeeded.js  createUser.js  generateToken.js  getBaseUrl.js  sendTransactionLog.js
examples/ReactJsSdkApp/src/components/: Consts.js  Utils.js
examples/ReactJsSdkApp/src/repository/: checkIfKycNeeded.js  createUser.js  generateToken.js  sendTransactionFeedback.js  sendTransactionLog.js
examples/admin-appsync/: package.json
examples/admin-appsync/public/: index.html
examples/admin-appsync/src/: App.js  Clients.js  Kyc.js  KycClient.js  MonitoringClient.js  Payment.js  PaymentClient.js  SARTable.js  UserDetails.js  UserKycsTable.js  UserPaymentsTable.js  UserSearch.js  UserSummary.js  UserTransactionMonitoringTable.js  Users.js
examples/mvp-app/python/: client_backend.py
examples/next-js-sdk-app/: README.md  package-lock.json  package.json  server.js
examples/next-js-sdk-app/pages/: index.js
examples/next-js-sdk-app/public/: pti.js
examples/passthrough-example/: example_passthrough.py
examples/phase1-app/python/: client_backend.py  pti_tools.py
examples/phase1-app/reactjs/: README.md  package-lock.json  package.json
examples/phase1-app/reactjs/public/: index.html
examples/phase1-app/reactjs/src/: App.js
examples/transaction-import/: Dockerfile  README.md  lambda.py  pti_tools.py  pyproject.toml  requirements.txt  transaction_importer.py
examples/webhook-server/python/: Pipfile  mock_event_sender.py  requirements.txt  webhook_server.py
guide/dynamicKyc/v0/: guide.md  index.html
guide/integration/v0/: guide.md  index.html
guide/readme/master/API Usage/: buy.md  crypto-deposits.md  fiat-withdrawals.md  financial-transactions.md  status-codes.md  trading.md  transaction-monitoring.md  transfer-1.md  user-assessment-2.md  user-management.md  wallets-1.md  wires.md  withdrawal-1.md
guide/readme/master/About fiant API/: components.md  definitions.md  getting-started.md  typical-flows.md
guide/readme/master/Authentication/: jwt.md  keys.md  signed-requests.md  using-sdks.md
guide/readme/master/Elements/: configuration.md  front-end-sdk-usage.md  payment-informations.md  user-assessment-1.md
guide/readme/master/Recipes/: ach-pull-deposit.md  crypto-deposit.md  element-add-bank-account.md  element-add-cc.md  element-add-crypto.md  element-perform-user-assessment.md  manage-your-users.md  trading_currencies.md  transacting-digital-assets.md  user-transfer.md  wire-withdrawal.md
guide/readme/master/Webhooks/: public-keys-2.md  receiving-webhooks.md  webhook-definitions.md
guide/readme/v1.0.184/API Usage/: crypto-deposits.md  fiat-withdrawals.md  financial-transactions.md  status-codes.md  trading.md  transaction-monitoring.md  transfer-1.md  user-assessment-2.md  user-management.md  wallets-1.md  wires.md  withdrawal-1.md
guide/readme/v1.0.184/About fiant API/: components.md  (+3 more)
guide/v0/: _sidebar.md  auth.md  examples.md  forms.md  guide.hmd  home.md  index.html  kyc.md  onboarding.md  sdk.md  sidebar.md  usage.md
guide/v1/: advanced-auth.md  advanced-definitions.md  advanced-elements.md  advanced-forms.md  advanced-frontend-sdk.md  advanced-kyc.md  advanced-sdk.md  advanced-user-assessment.md  auth.md  delete?examples.md  delete?usage.md  example-project.md  examples.md  fiant-onboarding.md  forms.md  general-api-usage.md  getting-started.md  kyc.md  quickstart-api.md  quickstart-elements.md  quickstart-receiving-webhooks.md  sandbox.pub  sdk.md  sidebar.md  usage.md  use-cases-java.md  webhook-response-definitions.md
utils/: keygen.py  pti-prod-public.jwk  requirements.txt  signed_request_maker.py
(+34 files in other folders)
