[tool.poetry]
name = "pti-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
cryptography = "^41.0.4"
python = "^3.9"
jwcrypto = "^1.4"
Flask = "^2.3.2"
Flask-SocketIO = "^5.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
