[tool.poetry]
name = "PythonBackendApp"
version = "0.1.0"
description = ""
authors = ["Rémi Cartier <rcartier@provenancetech.io>"]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
bidict = "0.22.1"
blinker = "1.6.2"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "42.0.0"
deprecated = "1.2.14"
flask-socketio = "5.3.6"
flask = "2.3.3"
h11 = "0.14.0"
idna = "3.4"
importlib-metadata = "6.8.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
jwcrypto = "1.5.1"
markupsafe = "2.1.3"
pycparser = "2.21"
python-engineio = "4.7.1"
python-socketio = "5.9.0"
requests = "2.31.0"
simple-websocket = "0.10.1"
urllib3 = "2.0.7"
werkzeug = "3.0.1"
wrapt = "1.15.0"
wsproto = "1.2.0"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
