[tool.poetry]
name = "PythonBackendApp"
version = "0.1.0"
description = ""
authors = ["Rémi Cartier <rcartier@provenancetech.io>"]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
bidict = "0.23.1"
blinker = "1.9.0"
certifi = "2025.6.15"
cffi = "2.0.0"
charset-normalizer = "3.4.2"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "44.0.3"
deprecated = "1.2.14"
flask-socketio = "5.3.6"
flask = "2.3.3"
h11 = "0.16.0"
idna = "3.10"
importlib-metadata = "6.8.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.6"
jwcrypto = "1.5.6"
markupsafe = "2.1.3"
pycparser = "2.22"
python-engineio = "4.12.3"
python-socketio = "5.14.1"
requests = "2.32.4"
simple-websocket = "0.10.1"
urllib3 = "2.5.0"
werkzeug = "3.1.4"
wrapt = "1.15.0"
wsproto = "1.2.0"
zipp = "3.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
