[tool.poetry]
name = "transaction-import"
version = "0.1.0"
description = "create json import payload or api calls from a csv with transaction information"
authors = ["Sébastien Renaud <srenaud@provenancetech.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["email"], version = "^1.8.2"}
requests = "^2.26.0"
docopt = "^0.6.2"
coinaddr = "^1.0.1"
jwcrypto = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
